feat:added jwt signing and verification in services
